<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_dev</name>
  <version>3.5.2</version>
  <description>
    Provides a cmake config for the default version of Gazebo for the ROS distribution.
  </description>

  <maintainer email="jrivero@openrobotics.org">Jose Luis Rivero</maintainer>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://gazebosim.org/tutorials?cat=connect_ros</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros_pkgs/issues</url>
  <url type="repository">https://github.com/ros-simulation/gazebo_ros_pkgs</url>

  <author>Johannes Meyer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_export_depend>libgazebo11-dev</build_export_depend>
  <exec_depend>gazebo11</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
