<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_msgs</name>
  <version>2.8.4</version>
  <description>
    Message and service data structures for interacting with Gazebo from ROS2.
  </description>

  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
