<?xml version="1.0"?>
<package>
  <name>gazebo_pkgs</name>
  <version>1.0.0</version>
  <description>Wrappers, tools and additional API's for using ROS with the <a href="http://ros.org/wiki/gazebo">Gazebo</a> simulator.</description>

  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <license>BSD,LGPL,Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
